--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1 class="titulo1">Reis Midi</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_nada">Nada</button>
+        <button onclick="alert('Não tem nada')" class="tecla tecla_nada">Nada</button>
         <button class="tecla tecla_secret">Secret</button>
         <button class="tecla tecla_tim">Tim</button>
 
@@ -34,14 +34,14 @@
         <button class="tecla tecla_tom">Tom</button>
     </section>
 
-    <audio src="SOUNDS/nada.mp3" id="som_tecla_nada"></audio>
-    <audio src="SOUNDS/secret.mp3" id="som_tecla_secret"></audio>
-    <audio src="SOUNDS/keye.wav" id="som_tecla_tim"></audio>
-    <audio src="SOUNDS/keya.wav" id="som_tecla_puff"></audio>
-    <audio src="SOUNDS/keys.wav" id="som_tecla_splash"></audio>
-    <audio src="SOUNDS/keyd.wav" id="som_tecla_toim"></audio>
-    <audio src="SOUNDS/keyz.wav" id="som_tecla_psh"></audio>
-    <audio src="SOUNDS/keyx.wav" id="som_tecla_tic"></audio>
+    <audio src="SOUNDS/nada.mp3" id="som_tecla_nada"></audio >
+    <audio src="SOUNDS/secret.mp3" id="som_tecla_secret"></audio >
+    <audio src="SOUNDS/keye.wav" id="som_tecla_tim"></audio >
+    <audio src="SOUNDS/keya.wav" id="som_tecla_puff"></audio >
+    <audio src="SOUNDS/keys.wav" id="som_tecla_splash"></audio >
+    <audio src="SOUNDS/keyd.wav" id="som_tecla_toim"></audio >
+    <audio src="SOUNDS/keyz.wav" id="som_tecla_psh"></audio >
+    <audio src="SOUNDS/keyx.wav" id="som_tecla_tic"></audio >
     <audio src="SOUNDS/keyc.wav" id="som_tecla_tom"></audio>
 
 </body>
